# whatsapp-rag-eval-kit

./: .gitignore  Dockerfile  README.es.md  README.md  pyproject.toml
.github/workflows/: docker.yml  tests.yml
examples/: example-report.md
src/whatsapp_rag_eval/: cli.py  evaluators.py  loader.py  mocks.py  report.py  runner.py
suites/: clinic-es.yml
tests/: test_evaluators.py  test_loader.py  test_report.py  test_runner.py
